kube/aks/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: kernelci-api-testns
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx-api
  tls:
    - hosts:
        - kernelci-api-staging1.eastus.cloudapp.azure.com
      secretName: api-tls
  rules:
    - host: kernelci-api-staging1.eastus.cloudapp.azure.com
      http:
        paths:
          - backend:
              service:
                name: api
                port:
                  number: 8000
            path: /
            pathType: Prefix
